--- a/app/views/topic_questions/_questions.html.haml
+++ b/app/views/topic_questions/_questions.html.haml
@@ -28,6 +28,6 @@
       %p= t(".notice.no_questions", :default => "There are no questions... Be the first!")
 
 - if @supervision.state != "topic_question" && controller.is_a?(TopicQuestionsController)
-  %div#next_step
+  #next_step
     = javascript_tag "document.location='#{supervision_step_path(@supervision)}'"
 
