--- a/app/views/solutions/index.html.haml
+++ b/app/views/solutions/index.html.haml
@@ -11,11 +11,37 @@
 
 = render "ideas/ideas"
 
+= render "solutions"
+
 %p= t(".ideas_feedback.heading", :default => "Feedback on ideas:")
 %p= @supervision.ideas_feedback.content
 
 - if @supervision.problem_owner?(current_user)
-  %p= t(".no_solutions", :default => "Wait for some solutions")
+
+  - if @supervision.solutions.empty?
+    %p= t(".no_solutions", :default => "Wait for some solutions")
+
+  - if @supervision.state == "solution_feedback"
+    %p= t(".solution_feedback.description", :default => "Provide the feedback on solutions")
+    = semantic_form_for(@solutions_feedback) do |f|
+      = hidden_field_tag :supervision_id, @supervision.id
+      = f.inputs do
+        = f.input :content
+      = f.buttons do
+        = f.commit_button t(".solutions_feedback.submit", :default => "Submit")
+
 - else
-  %p= t(".step_description", :default => "Any solutions?")
+
+  - if @supervision.voted_on_next_step?(current_user) || @supervision.state == "solution_feedback"
+    %p= t(".waiting_for_feedback", :default => "Wait for %{problem_owner}'s feedback", :problem_owner => @supervision.problem_owner.name)
+  - else
+    %p= t(".step_description", :default => "Any solutions?")
+
+    = semantic_form_for(@solution) do |f|
+      = hidden_field_tag :supervision_id, @supervision.id
+      = f.inputs do
+        = f.input :content
+      = f.buttons do
+        = f.commit_button t(".solution.submit", :default => "Submit")
+        = link_to(t(".solution.no_more", :default => "I have no more solutions"), supervision_votes_path(:supervision_id => @supervision.id), :method => :post)
 
