Styled topic question phase

--- a/app/views/layouts/_stylesheets.html.haml
+++ b/app/views/layouts/_stylesheets.html.haml
@@ -3,4 +3,5 @@
 /[if lt IE 8] <haml:loud> stylesheet_link_tag 'blueprint/ie' </haml:loud>
 = stylesheet_link_tag 'custom', :media => 'screen'
 = stylesheet_link_tag 'formtastic'
+= stylesheet_link_tag 'supervision', :media => 'screen'
 
