--- a/app/views/layouts/_stylesheets.html.haml
+++ b/app/views/layouts/_stylesheets.html.haml
@@ -4,4 +4,5 @@
 = stylesheet_link_tag 'custom', :media => 'screen'
 = stylesheet_link_tag 'formtastic'
 = stylesheet_link_tag 'supervision', :media => 'screen'
+= stylesheet_link_tag 'jquery.rating', :media => 'screen'
 
