--- a/public/stylesheets/sass/supervision.sass
+++ b/public/stylesheets/sass/supervision.sass
@@ -1,17 +1,23 @@
-ul.topics
+ul.topics, ul#topic_questions, ul#ideas
   overflow: auto
   list-style: none
   li
     float: left
+
+p.head
+  font-weight: bold
 
 .contentable
   width: 250px
   background-color: #CCC
   margin: 5px
   padding: 5px
-  overflow: auto
+  overflow: hidden
   .author
     float: left
     margin: 10px
-    p
-      margin: 0
+  p
+    margin: 0
+  form
+    clear: both
+
