--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,7 @@
     = javascript_include_tag 'chat'
     = javascript_tag "if(document.pgs === undefined) document.pgs = {}; document.pgs.controller = '#{controller.class}';"
     = javascript_include_tag 'supervision'
+    = javascript_include_tag 'jquery.rating'
     = csrf_meta_tag
 
   %body
