--- a/app/views/solutions/index.html.haml
+++ b/app/views/solutions/index.html.haml
@@ -13,8 +13,9 @@
 
 = render "solutions"
 
-%p= t(".ideas_feedback.heading", :default => "Feedback on ideas:")
-%p= @supervision.ideas_feedback.content
+%p.head= t(".ideas_feedback.heading", :default => "Feedback on ideas:")
+= render :layout => "supervisions/contentable", :object => @supervision.ideas_feedback do
+  = ""
 
 - if @supervision.problem_owner?(current_user)
 
