--- a/app/views/topic_questions/new.html.haml
+++ b/app/views/topic_questions/new.html.haml
@@ -10,13 +10,16 @@
 = render "questions"
 
 - unless @supervision.problem_owner?(current_user)
-  %p= t(".step_description", :default => "Do you have any question regarding the topic?")
+  - if @supervision.voted_on_next_step?(current_user)
+    %p= t(".waiting_for_others", :default => "Wait for other questions and answers.")
+  - else
+    %p= t(".step_description", :default => "Do you have any question regarding the topic?")
 
-  = semantic_form_for(@question, :url => topic_questions_path) do |f|
-    = hidden_field_tag :supervision_id, @supervision.id
-    = f.inputs do
-      = f.input :content
-    = f.buttons do
-      = f.commit_button t(".question.submit", :default => "Ask")
-      = link_to(t(".question.no_more", :default => "I have no more questions"), supervision_votes_path(:supervision_id => @supervision.id), :method => :post)
+    = semantic_form_for(@question, :url => topic_questions_path) do |f|
+      = hidden_field_tag :supervision_id, @supervision.id
+      = f.inputs do
+        = f.input :content
+      = f.buttons do
+        = f.commit_button t(".question.submit", :default => "Ask")
+        = link_to(t(".question.no_more", :default => "I have no more questions"), supervision_votes_path(:supervision_id => @supervision.id), :method => :post)
 
