--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     = javascript_tag "jQuery.noConflict();"
     = javascript_include_tag 'jquery.form'
     = javascript_include_tag 'chat'
-    = javascript_tag "if(document.pgs === undefined) document.pgs = {}; document.pgs.controller = '#{controller.class}';"
+    = javascript_meta_information
     = javascript_include_tag 'supervision'
     = javascript_include_tag 'jquery.rating'
     = csrf_meta_tag
