--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -17,6 +17,9 @@
     %p= t(".no_ideas", :default => "Wait for some ideas")
 
   - if @supervision.state == "idea_feedback"
+
+    %p= t(".feedback.info", :default => "Provide the feedback on ideas")
+
     = semantic_form_for(@ideas_feedback) do |f|
       = hidden_field_tag :supervision_id, @supervision.id
       = f.inputs do
