--- a/app/views/solutions/index.html.haml
+++ b/app/views/solutions/index.html.haml
@@ -2,20 +2,17 @@
 
 %h2= t(".heading", :default => "Solutions")
 
-%dl
-  %dt= t(".topic", :default => "Current topic")
-  %dd
-    = render "topics/topic", :topic => @supervision.topic
+%p.head= t(".topic", :default => "Current topic")
+= render "topics/topic", :topic => @supervision.topic
 
 = render "topic_questions/questions"
 
 = render "ideas/ideas"
 
-= render "solutions"
-
 %p.head= t(".ideas_feedback.heading", :default => "Feedback on ideas:")
-= render :layout => "supervisions/contentable", :object => @supervision.ideas_feedback do
-  = ""
+= render(:layout => "supervisions/contentable", :object => @supervision.ideas_feedback) {}
+
+= render "solutions/solutions"
 
 - if @supervision.problem_owner?(current_user)
 
@@ -23,6 +20,7 @@
     %p= t(".no_solutions", :default => "Wait for some solutions")
 
   - if @supervision.state == "solution_feedback"
+
     %p= t(".solution_feedback.description", :default => "Provide the feedback on solutions")
     = semantic_form_for(@solutions_feedback) do |f|
       = hidden_field_tag :supervision_id, @supervision.id
@@ -35,7 +33,7 @@
 
   - if @supervision.voted_on_next_step?(current_user) || @supervision.state == "solution_feedback"
     %p= t(".waiting_for_feedback", :default => "Wait for %{problem_owner}'s feedback", :problem_owner => @supervision.problem_owner.name)
-  - else
+  - elsif @supervision.state == "solution"
     %p= t(".step_description", :default => "Any solutions?")
 
     = semantic_form_for(@solution) do |f|
@@ -45,4 +43,9 @@
       = f.buttons do
         = f.commit_button t(".solution.submit", :default => "Submit")
         = link_to(t(".solution.no_more", :default => "I have no more solutions"), supervision_votes_path(:supervision_id => @supervision.id), :method => :post)
+
+
+- if @supervision.solutions_feedback
+  %p.head= t(".solutions_feedback.heading", :default => "Feedback on solutions:")
+  = render(:layout => "supervisions/contentable", :object => @supervision.solutions_feedback) {}
 
