--- a/app/views/topics/index.html.haml
+++ b/app/views/topics/index.html.haml
@@ -2,7 +2,7 @@
 
 %h2= t(".heading", :default => "List of already submitted topics")
 
-= render "list", :topics => @topics
+= render "topics", :topics => @topics
 
-= javascript_tag %Q{setTimeout("document.location=''", 1000);}
+= javascript_tag %Q{setTimeout("window.location.reload(true)", 1000);}
 
