--- a/public/stylesheets/sass/supervision.sass
+++ b/public/stylesheets/sass/supervision.sass
@@ -1,6 +1,7 @@
-ul.topics, ul#topic_questions, ul#ideas
+ul.topics, ul#topic_questions, ul#ideas, ul#solutions
   overflow: auto
   list-style: none
+  margin: 0
   li
     float: left
 
