--- a/public/stylesheets/supervision.css
+++ b/public/stylesheets/supervision.css
@@ -1,7 +1,8 @@
-ul.topics, ul#topic_questions, ul#ideas {
+ul.topics, ul#topic_questions, ul#ideas, ul#solutions {
   overflow: auto;
-  list-style: none; }
-  ul.topics li, ul#topic_questions li, ul#ideas li {
+  list-style: none;
+  margin: 0; }
+  ul.topics li, ul#topic_questions li, ul#ideas li, ul#solutions li {
     float: left; }
 
 p.head {
