--- a/app/views/ideas/_ideas.html.haml
+++ b/app/views/ideas/_ideas.html.haml
@@ -4,17 +4,7 @@
   - @supervision.ideas.each do |idea|
     %li[idea]
       = render :layout => "supervisions/contentable", :object => idea do
-        - if idea.rating || @supervision.problem_owner?(current_user)
-          = form_for(idea) do |f|
-            %p.head= t(".heading.rating", :default => "Rating")
-            = hidden_field_tag :supervision_id, @supervision.id
-
-            - 1.upto(5) do |i|
-              = f.label :"rating_#{i}", i, :class => "hidden"
-              = f.radio_button :rating, i, (idea.rating ? {:disabled => 'disabled'} : {}).update(:class => "star")
-
-            - unless idea.rating
-              = f.submit t(".rate.rate", :default => "Rate")
+        = render "supervisions/rating", :rateable => idea
 
   #current_step{:"data-step" => @supervision.state}
 
