--- a/app/views/solutions/index.html.haml
+++ b/app/views/solutions/index.html.haml
@@ -22,10 +22,7 @@
   - if @supervision.state == "solution_feedback"
 
     %p= t(".solution_feedback.description", :default => "Provide the feedback on solutions")
-    = semantic_form_for(@solutions_feedback) do |f|
-      = hidden_field_tag :supervision_id, @supervision.id
-      = f.inputs do
-        = f.input :content
+    = render :layout => "supervisions/contentable_form", :locals => {:contentable => @solutions_feedback} do |f|
       = f.buttons do
         = f.commit_button t(".solutions_feedback.submit", :default => "Submit")
 
@@ -36,14 +33,10 @@
   - elsif @supervision.state == "solution"
     %p= t(".step_description", :default => "Any solutions?")
 
-    = semantic_form_for(@solution) do |f|
-      = hidden_field_tag :supervision_id, @supervision.id
-      = f.inputs do
-        = f.input :content
+    = render :layout => "supervisions/contentable_form", :locals => {:contentable => @solution} do |f|
       = f.buttons do
         = f.commit_button t(".solution.submit", :default => "Submit")
         = link_to(t(".solution.no_more", :default => "I have no more solutions"), supervision_votes_path(:supervision_id => @supervision.id), :method => :post)
-
 
 - if @supervision.solutions_feedback
   %p.head= t(".solutions_feedback.heading", :default => "Feedback on solutions:")
