--- a/app/views/topics/new.html.haml
+++ b/app/views/topics/new.html.haml
@@ -1,9 +1,8 @@
 - @title = t(".title", :default => "New Topic")
 
-= semantic_form_for(@topic) do |f|
-  = f.inputs do
-    = hidden_field_tag :supervision_id, @topic.supervision.id
-    = f.input :content, :as => :text, :hint => t(".content.hint", :default => "Enter your problem or leave this blank if you do not have any.")
+%p= t(".content.hint", :default => "Enter your problem or leave this blank if you do not have any.")
+
+= render :layout => "supervisions/contentable_form", :locals => {:contentable => @topic} do |f|
   = f.buttons do
     = f.commit_button t(".submit", :default => "Submit Topic")
 
