--- a/app/views/layouts/_stylesheets.html.haml
+++ b/app/views/layouts/_stylesheets.html.haml
@@ -1,8 +1,5 @@
-= stylesheet_link_tag 'blueprint/screen', :media => 'screen'
-= stylesheet_link_tag 'blueprint/print',  :media => 'print'
-/[if lt IE 8] <haml:loud> stylesheet_link_tag 'blueprint/ie' </haml:loud>
-= stylesheet_link_tag 'custom', :media => 'screen'
+= stylesheet_link_tag 'compiled/custom', :media => 'screen'
 = stylesheet_link_tag 'formtastic'
-= stylesheet_link_tag 'supervision', :media => 'screen'
+= stylesheet_link_tag 'compiled/supervision', :media => 'screen'
 = stylesheet_link_tag 'jquery.rating', :media => 'screen'
 
