Move stylesheets to compass directory, create one file for screen media

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -10,3 +10,8 @@
 // Combine the partials into a single screen stylesheet.
 @import "partials/page";
 @import "partials/form";
+
+@import "partials/custom";
+@import "partials/supervision";
+@import "partials/formtastic";
+@import "partials/jquery.rating";
