--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -1,11 +1,11 @@
 // Import the non-default scaffolding module to help us get started.
-@import "blueprint/scaffolding";
+@import blueprint/scaffolding
 
-@include blueprint-typography;
-@include blueprint-utilities;
-@include blueprint-debug;
-@include blueprint-interaction;
++blueprint-typography
++blueprint-utilities
++blueprint-debug
++blueprint-interaction
 
 // Remove the scaffolding when you're ready to start doing visual design.
 // Or leave it in if you're happy with how blueprint looks out-of-the-box
-@include blueprint-scaffolding;
++blueprint-scaffolding
