--- a/app/stylesheets/partials/_two_col.sass
+++ b/app/stylesheets/partials/_two_col.sass
@@ -21,18 +21,18 @@
 //    |        #footer         |
 //    +--------+---------------+
 
-body.two-col {
-  #container {
-    @include container; }
-  #header, #footer {
-    @include column($blueprint-grid-columns); }
-  #sidebar {
+body.two-col
+  #container
+    +container
+  #header, #footer
+    +column($blueprint-grid-columns)
+  #sidebar
     // One third of the grid columns, rounding down. With 24 cols, this is 8.
-    $sidebar-columns: floor($blueprint-grid-columns / 3);
-    @include column($sidebar-columns); }
-  #content {
+    $sidebar-columns: floor($blueprint-grid-columns / 3)
+    +column($sidebar-columns)
+  #content
     // Two thirds of the grid columns, rounding up.
     // With 24 cols, this is 16.
-    $content-columns: ceil(2 * $blueprint-grid-columns / 3);
+    $content-columns: ceil(2 * $blueprint-grid-columns / 3)
     // true means it's the last column in the row
-    @include column($content-columns, true); } }
+    +column($content-columns, true)
