--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -1,17 +1,17 @@
 // This import applies a global reset to any page that imports this stylesheet.
-@import "blueprint/reset";
+@import blueprint/reset
 
 // To configure blueprint, edit the partials/base.sass file.
-@import "partials/base";
+@import partials/base
 
 // Import all the default blueprint modules so that we can access their mixins.
-@import "blueprint";
+@import blueprint
 
 // Combine the partials into a single screen stylesheet.
-@import "partials/page";
-@import "partials/form";
+@import partials/page
+@import partials/form
 
-@import "partials/custom";
-@import "partials/supervision";
-@import "partials/formtastic";
-@import "partials/jquery.rating";
+@import partials/custom
+@import partials/supervision
+@import partials/formtastic
+@import partials/jquery.rating
