Use html5 format, add translation keys, unroll routes
 * Add meta charset tag and html5 doctype (default format for haml)
 * Add missing translations for some headers
 * Unroll loop in routes, remove general route for controller/action/id

--- a/app/stylesheets/partials/_formtastic.sass
+++ b/app/stylesheets/partials/_formtastic.sass
@@ -69,7 +69,7 @@ form.formtastic
 
 /* clearfixing the fieldsets
 
-html[xmlns] form.formtastic fieldset
+html form.formtastic fieldset
   display: block
 
 * html form.formtastic fieldset
@@ -90,7 +90,7 @@ form.formtastic fieldset > ol > li
 
 /* clearfixing the li's
 
-html[xmlns] form.formtastic fieldset > ol > li
+html form.formtastic fieldset > ol > li
   display: block
 
 * html form.formtastic fieldset > ol > li
@@ -177,7 +177,7 @@ form.formtastic fieldset
  *specific than the more general rule below. TODO: Revist the clearing hack and this rule.
  *--------------------------------------------------------------------------------------------------
 
-html[xmlns] form.formtastic fieldset ol li.hidden
+html form.formtastic fieldset ol li.hidden
   display: none
 
 /* BOOLEAN OVERRIDES
