--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,8 @@
-!!! Strict
-%html{:lang => "en", "xml:lang" => "en", :xmlns => "http://www.w3.org/1999/xhtml"}
+!!! 5
+%html{:lang => "en"}
   %head
     %title= title
+    %meta{ :charset => "utf-8" }
     = csrf_meta_tag
     = javascript_meta_information
 
