--- a/app/views/pages/home_guest.html.haml
+++ b/app/views/pages/home_guest.html.haml
@@ -1,7 +1,8 @@
-%h1 Peer Supervision Groups
+%h1= t(".title", :default => "Peer Supervision Groups")
 %p
-  = t(".description", :default => "This is the live test site for the Peer Supervision Groups project for Patongo. Visit  <a href='http://www.patongo.de/'> project page</a>.")
+  = t(".description", :default => "This is the live test site for the Peer Supervision Groups project for Patongo. Visit <a href='http://www.patongo.de/'>project page</a>.").html_safe
+
 %h2= t(".about_title", :default => "About Peer Supervision Groups")
-=render 'about'
+= render 'about'
 = link_to t(".links.signup", :default => "Sign up now!"), signup_path, :class => "signup_button round"
 
