Refactor styles and main layout
 * Move all javascripts to bottom of body
 * Add semantic markup from html, add javascript code for IE
 * Move _custom.sass's partial content to _page.sass
 * Use compass helpers in stylesheet

--- a/app/stylesheets/partials/_base.sass
+++ b/app/stylesheets/partials/_base.sass
@@ -8,3 +8,16 @@ $blueprint-grid-margin: 10px
 // Use this to calculate the width based on the total width.
 // Or you can set $blueprint-grid-width to a fixed value and unset $blueprint-container-size -- it will be calculated for you.
 $blueprint-grid-width: ($blueprint-container-size + $blueprint-grid-margin) / $blueprint-grid-columns - $blueprint-grid-margin
+
+$blueprint-background-color: #ffffff
+
+$body-bg-color: #cff
+
+$header-pagetitle-color: #000
+$header-pagetitle-hover-color: #f00
+$header-pagetitle-active-color: $header-pagetitle-hover-color
+$header-pagetitle-visited-color: $header-pagetitle-color
+
+$link-color: #09c
+$link-hover-color: #069
+$link-visited-color: $link-color
