--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -9,3 +9,283 @@
 // Remove the scaffolding when you're ready to start doing visual design.
 // Or leave it in if you're happy with how blueprint looks out-of-the-box
 +blueprint-scaffolding
+
+@import compass/css3
+@import compass/reset/utilities
+@import compass/utilities
+
+.hidden
+  display: none
+
+body
+  background-color: $body-bg-color
+
+a
+  +hover-link
+
+header
+  +container
+  +prepend-top
+  +border-radius(10px)
+  +box-shadow
+  background-color: $blueprint-background-color
+
+  $h1-columns: ceil($blueprint-grid-columns / 2) - 1
+  $h2-columns: floor($blueprint-grid-columns / 2) - 1
+  $nav-columns: $blueprint-grid-columns - 2
+  hgroup
+    h1
+      +push(1)
+      +column($h1-columns)
+      +prepend-top
+      text-align: left
+      font-weight: bold
+      font-size: x-large
+
+      a
+        +hover-link
+        +link-colors($header-pagetitle-color, $header-pagetitle-hover-color, $header-pagetitle-active-color, $header-pagetitle-visited-color)
+        &:hover
+          text-decoration: none
+
+    h2
+      +column($h2-columns, true)
+      +prepend-top
+      text-align: right
+      font-weight: bold
+      font-size: x-large
+
+  nav
+    +push(1)
+    +column($nav-columns, true)
+    ul
+      display: inline-block
+      +horizontal-list
+      +push-base
+    a
+      font-weight: bold
+
+footer
+  +container
+  +prepend-top
+  +border-radius(10px)
+  +box-shadow
+  background-color: $blueprint-background-color
+
+  nav
+    +reset-box-model
+    text-align: center
+    ul
+      display: inline-block
+      +horizontal-list
+
+#content
+  +container
+  $content-columns: $blueprint-grid-columns
+  +prepend-top
+  +border-radius(10px)
+  +box-shadow
+  background-color: $blueprint-background-color
+
+
+.navigation
+  clear: both
+  float: right
+  background-color: white
+  padding: 0 0.7em
+  white-space: nowrap
+
+  ul
+    +reset-list-style
+    +reset-box-model
+
+    li
+      display: inline-block
+      padding: 0.2em 0
+      a
+        padding: 0 5px
+        font-weight: bold
+        &:visited
+          color: #09c
+        &:hover
+          text-decoration: underline
+
+/* Sign up button
+
+a.signup_button
+  margin-left: auto
+  margin-right: auto
+  display: block
+  text-align: center
+  width: 190px
+  color: #fff
+  background: #006400
+  font-size: 150%
+  font-weight: bold
+  padding: 20px
+
+/* Round corners
+
+.round
+  +border-radius(10px)
+
+/* User show page
+
+.sidebar
+  float: right
+  padding: 1em
+  vertical-align: top
+  background: #ffc
+  width: 270px
+  height: 300px
+
+.groups
+  margin-left: auto
+  margin-right: auto
+  overflow: auto
+
+.profile img.gravatar
+  border: 1px solid #999
+  margin-bottom: -15px
+
+div
+  &.field, &.actions
+    margin-bottom: 10px
+
+/* Error Messages
+
+.fieldWithErrors
+  padding: 2px
+  background-color: red
+  display: table
+  label
+    color: #fff
+
+#errorExplanation
+  width: 400px
+  border: 2px solid red
+  padding: 7px
+  padding-bottom: 12px
+  margin-bottom: 20px
+  background-color: #f0f0f0
+  h2
+    text-align: left
+    font-weight: bold
+    padding: 5px 5px 5px 15px
+    font-size: 12px
+    margin: -7px
+    background-color: #c00
+    color: #fff
+  p
+    color: #333
+    margin-bottom: 0
+    padding: 5px
+  ul li
+    font-size: 12px
+    list-style: square
+
+/* CSS for the user index
+
+ul.users
+  margin-top: 1em
+
+.users li
+  list-style: none
+
+div.user_info
+  img
+    padding-right: 0.1em
+  a
+    text-decoration: none
+  span
+    &.user_name
+      position: absolute
+
+/* CSS for chat
+
+#chat .main
+  .chat_part
+    ul.chat_updates
+      height: 300px
+      border: 1px solid
+      margin: 0
+      padding: 3px
+      overflow: auto
+      li.chat_update
+        &.active
+          background-color: #ccc
+        &.uncommited
+          div.message
+            color: green
+        div
+          display: inline
+          &.login
+            color: blue
+  ul.rules
+    margin: 0
+    float: right
+    width: 250px
+    margin-left: 10px
+    li
+      list-style-type: none
+      padding: 3px
+    li.current
+      background-color: yellow
+    li.rule
+      border: 1px solid black
+    ul, ul li, p
+      display: inline
+
+ul.chatting_users
+  position: relative
+  list-style: none
+  overflow: hidden
+  margin-bottom: 0
+  li.chat_user
+    float: left
+    margin-right: 10px
+    padding: 2px
+    width: 100px
+    &.leader .brief
+      background-color: yellow
+    &.problem_owner .brief
+      background-color: green
+    img
+      margin-left: 20px
+    p
+      text-align: center
+      margin: 0
+    .brief
+      border: 1px solid black
+    &.active
+      background-color: #cfffcf
+  ul.actions
+    list-style: none
+    color: #888
+
+form.edit_chat_update .field
+  label
+    display: inline
+    margin-right: 10px
+  #chat_update_message
+    width: 440px
+  #chat_update_submit
+    width: 104px
+
+
+#content
+  .group_brief
+    background: #eee
+    margin: 0 25px 10px 0
+    .inner
+      width: 270 - 2 * 8 px
+      margin: 8px
+      .title
+        border-bottom: 1px solid
+      ul.actions
+        margin: 0
+        list-style-type: none
+        font-size: 0.9em
+        li
+          float: right
+          margin-right: 4px
