--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,20 +10,29 @@
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
     /[if lt IE 8]
       = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
+    /[if lt IE 9]
+      :javascript
+        var e = ("abbr,article,aside,audio,canvas,datalist,details," + 
+            "figure,footer,header,hgroup,mark,menu,meter,nav,output," + 
+            "progress,section,time,video").split(','); 
+        for (var i = 0; i < e.length; i++) { 
+            document.createElement(e[i]); 
+        }
 
+  %body
+    %section
+      = render 'layouts/header'
+
+      #content
+        - flash.each do |severity, message|
+          %div{:class => "flash #{severity}"}= message
+        = yield
+      = render 'layouts/footer'
+
+    -# Javascripts at end of body, to not slow down dowloading content
     = javascript_include_tag :defaults
     = javascript_include_tag 'jquery.form'
     = javascript_include_tag 'chat'
     = javascript_include_tag 'supervision'
     = javascript_include_tag 'jquery.rating'
-
-  %body
-    #outer
-      = render 'layouts/header'
-
-      #content.round
-        - flash.each do |key, value|
-          %div{:class => "flash #{key}"}= value
-        = yield
-      = render 'layouts/footer'
 
