--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -23,10 +23,10 @@ body
 a
   +hover-link
 
-header
+section > header
   +container
   +prepend-top
-  +border-radius(10px)
+  +border-radius($border-radius)
   +box-shadow
   background-color: $blueprint-background-color
 
@@ -38,7 +38,6 @@ header
       +push(1)
       +column($h1-columns)
       +prepend-top
-      text-align: left
       font-weight: bold
       font-size: x-large
 
@@ -65,10 +64,10 @@ header
     a
       font-weight: bold
 
-footer
+section > footer
   +container
   +prepend-top
-  +border-radius(10px)
+  +border-radius($border-radius)
   +box-shadow
   background-color: $blueprint-background-color
 
@@ -81,12 +80,36 @@ footer
 
 #content
   +container
-  $content-columns: $blueprint-grid-columns
   +prepend-top
-  +border-radius(10px)
+  +border-radius($border-radius)
   +box-shadow
   background-color: $blueprint-background-color
 
+  article
+    +push(1)
+    +column($blueprint-grid-columns - 2, true)
+    +prepend-top
+    +append-bottom
+
+    header
+      +append-bottom
+
+  .flash
+    +prepend-top
+    +push(1)
+    +column($blueprint-grid-columns - 2, true)
+    &.success
+      color: $success-color
+      background-color: $success-bg-color
+      border: 2px solid $success-border-color
+    &.notice
+      color: $notice-color
+      background-color: $notice-bg-color
+      border: 2px solid $notice-border-color
+    &.error
+      color: $error-color
+      background-color: $error-bg-color
+      border: 2px solid $error-border-color
 
 .navigation
   clear: both
@@ -113,21 +136,31 @@ footer
 /* Sign up button
 
 a.signup_button
-  margin-left: auto
-  margin-right: auto
-  display: block
+  $column-width: 4
+  $push-column-width: (($blueprint-grid-columns - 2) / 2) - ($column-width / 2)
+  +push($push-column-width)
+  +column($column-width, true)
+  +border-radius($border-radius)
   text-align: center
-  width: 190px
-  color: #fff
-  background: #006400
-  font-size: 150%
+  font-size: large
   font-weight: bold
   padding: 20px
 
-/* Round corners
+  color: $signup-link-color
+  background-color: $signup-link-bg-color
+  &:visited
+    color: $signup-link-visited-color
+    background-color: $signup-link-visited-bg-color
+  &:hover
+    color: $signup-link-hover-color
+    background-color: $signup-link-hover-bg-color
+    text-decoration: none
+  &:active
+    color: $signup-link-active-color
+    background-color: $signup-link-active-bg-color
 
 .round
-  +border-radius(10px)
+  +border-radius($border-radius)
 
 /* User show page
 
