--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,2 +1,4 @@
-%h1= t(".about_title", :default => "About Peer Supervision Groups")
-=render 'about'
+%article
+  %header
+    %h1= t(".about_title", :default => "About Peer Supervision Groups")
+  =render 'about'
