--- a/app/views/pages/help.html.haml
+++ b/app/views/pages/help.html.haml
@@ -1,3 +1,5 @@
-%h1= t(".help", :default => "Help")
-= render 'help'
+%article
+  %head
+    %h1= t(".help", :default => "Help")
+  = render 'help'
 
