--- a/app/views/users/_fields.html.haml
+++ b/app/views/users/_fields.html.haml
@@ -1,5 +1,5 @@
 = f.input :name
-= f.input :email
+= f.input :email, :input_html => { :type => "email" }
 = f.input :password, :as => :password
 = f.input :password_confirmation, :as => :password
 = f.input :passcode, :as => :password
