Add id_for_body helper

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
             document.createElement(e[i]); 
         }
 
-  %body
+  %body{ :id => id_for_body }
     %section
       = render 'layouts/header'
 
