Cleanup and refactoring
 * Fix some routes, nest routes which depend on supervision
 * Unroll define_methods calls in User model
 * JSlint javascript file

All in one commit, as it all depends on other things and it would take
to much time to split and test separate commits.

--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,4 +1,5 @@
-= link_to t(".links.edit", :default => "Edit"), edit_group_path(@group)
+%article
+  = link_to t(".links.edit", :default => "Edit"), edit_group_path(@group)
 
-- users_list(@group.members, @group.founder)
+  - users_list(@group.members, @group.founder)
 
