--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,6 +3,7 @@
     %h1= link_to "Peer Group Supervision", root_path
     %h2= @title
   %nav
+    = t(".welcome", :default => "Welcome %{user_name}", :user_name => current_user.name) if signed_in?
     %ul
       %li= link_to t(".links.home", :default => "Home"), root_path
       - if signed_in?
