--- a/app/views/supervisions/_rating.html.haml
+++ b/app/views/supervisions/_rating.html.haml
@@ -1,9 +1,7 @@
 - if rateable.rating || @supervision.problem_owner?(current_user)
 
-  = form_for(rateable) do |f|
+  = form_for([@supervision, rateable]) do |f|
     %p.head= t(".heading.rating", :default => "Rating")
-    = hidden_field_tag :supervision_id, @supervision.id
-
     - 1.upto(5) do |i|
       = f.label :"rating_#{i}", i, :class => "hidden"
       = f.radio_button :rating, i, (rateable.rating ? {:disabled => 'disabled'} : {}).update(:class => "star")
