--- a/app/views/topics/_topic.html.haml
+++ b/app/views/topics/_topic.html.haml
@@ -1,7 +1,6 @@
 = render :layout => "supervisions/contentable", :object => topic, :locals => {:content => topic_content(topic)} do
-  - if @vote && !topic.content.blank?
-    = semantic_form_for(@vote, :url => topic_votes_path) do |f|
-      = hidden_field_tag :supervision_id, @supervision.id
+  - if @vote && topic.content.present?
+    = semantic_form_for([@supervision, @vote], :url => supervision_topic_votes_path(@supervision)) do |f|
       = f.input :statement_id, :as => :hidden, :value => topic.id
       = f.input :statement_type, :as => :hidden, :value => "Topic"
 
